CREATE TABLE "users" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "email" varchar UNIQUE,
  "username" varchar UNIQUE,
  "display_name" varchar,
  "password_hash" varchar,
  "created_at" timestamp NOT NULL DEFAULT (now())
);

CREATE TABLE "problem_instances" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "domain" varchar NOT NULL,
  "n" integer NOT NULL,
  "square_size" double precision NOT NULL DEFAULT 1,
  "container_type" varchar NOT NULL DEFAULT 'square',
  "allow_rotation" boolean NOT NULL DEFAULT true,
  "quant_scale" bigint NOT NULL DEFAULT 1000000000,
  "created_at" timestamp NOT NULL DEFAULT (now())
);

CREATE TABLE "workspaces" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "instance_id" bigint NOT NULL,
  "owner_user_id" bigint,
  "name" varchar,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "updated_at" timestamp NOT NULL DEFAULT (now())
);

CREATE TABLE "workspace_squares" (
  "workspace_id" bigint NOT NULL,
  "idx" integer NOT NULL,
  "cx" double precision NOT NULL,
  "cy" double precision NOT NULL,
  "ux" double precision NOT NULL,
  "uy" double precision NOT NULL,
  "cx_q" bigint NOT NULL,
  "cy_q" bigint NOT NULL,
  "ux_q" bigint NOT NULL,
  "uy_q" bigint NOT NULL,
  "pinned" boolean NOT NULL DEFAULT false
);

CREATE TABLE "submissions" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "instance_id" bigint NOT NULL,
  "user_id" bigint,
  "workspace_id" bigint,
  "status" varchar NOT NULL DEFAULT 'pending',
  "objective_value" double precision,
  "min_slack" double precision,
  "solution_hash" bytea NOT NULL,
  "created_at" timestamp NOT NULL DEFAULT (now())
);

CREATE TABLE "submission_squares" (
  "submission_id" bigint NOT NULL,
  "idx" integer NOT NULL,
  "cx" double precision NOT NULL,
  "cy" double precision NOT NULL,
  "ux" double precision NOT NULL,
  "uy" double precision NOT NULL,
  "cx_q" bigint NOT NULL,
  "cy_q" bigint NOT NULL,
  "ux_q" bigint NOT NULL,
  "uy_q" bigint NOT NULL,
  "pinned" boolean NOT NULL DEFAULT false
);

CREATE TABLE "submission_rectangle_squares" (
  "submission_id" bigint NOT NULL,
  "idx" integer NOT NULL,
  "cx" double precision NOT NULL,
  "cy" double precision NOT NULL,
  "ux" double precision NOT NULL,
  "uy" double precision NOT NULL,
  "cx_q" bigint NOT NULL,
  "cy_q" bigint NOT NULL,
  "ux_q" bigint NOT NULL,
  "uy_q" bigint NOT NULL,
  "width" double precision NOT NULL DEFAULT 56,
  "height" double precision NOT NULL DEFAULT 56,
  "pinned" boolean NOT NULL DEFAULT false
);

CREATE TABLE "validation_runs" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "submission_id" bigint NOT NULL,
  "validator_ver" varchar NOT NULL,
  "valid" boolean NOT NULL,
  "reason" text,
  "metrics" jsonb,
  "created_at" timestamp NOT NULL DEFAULT (now())
);

COMMENT ON COLUMN "problem_instances"."domain" IS 'square_packing_rotatable';

COMMENT ON TABLE "workspace_squares" IS 'Primary key is (workspace_id, idx)';

COMMENT ON COLUMN "submissions"."status" IS 'pending | valid | invalid';

COMMENT ON TABLE "submission_squares" IS 'Primary key is (submission_id, idx)';
COMMENT ON TABLE "submission_rectangle_squares" IS 'Primary key is (submission_id, idx)';

ALTER TABLE "workspaces" ADD CONSTRAINT "ws_instance" FOREIGN KEY ("instance_id") REFERENCES "problem_instances" ("id");

ALTER TABLE "workspaces" ADD CONSTRAINT "ws_owner" FOREIGN KEY ("owner_user_id") REFERENCES "users" ("id");

ALTER TABLE "workspace_squares" ADD CONSTRAINT "wsq_ws" FOREIGN KEY ("workspace_id") REFERENCES "workspaces" ("id");

ALTER TABLE "submissions" ADD CONSTRAINT "sub_inst" FOREIGN KEY ("instance_id") REFERENCES "problem_instances" ("id");

ALTER TABLE "submissions" ADD CONSTRAINT "sub_user" FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "submissions" ADD CONSTRAINT "sub_ws" FOREIGN KEY ("workspace_id") REFERENCES "workspaces" ("id");

ALTER TABLE "submission_squares" ADD CONSTRAINT "subsq_sub" FOREIGN KEY ("submission_id") REFERENCES "submissions" ("id");

ALTER TABLE "submission_rectangle_squares" ADD CONSTRAINT "subrect_sub" FOREIGN KEY ("submission_id") REFERENCES "submissions" ("id");

ALTER TABLE "validation_runs" ADD CONSTRAINT "val_sub" FOREIGN KEY ("submission_id") REFERENCES "submissions" ("id");
