// extSearch database schema (DBML)
// Use at https://dbdiagram.io or with dbml-renderer for visualization.

Table users {
  id bigint [pk, increment, note: 'GENERATED BY DEFAULT AS IDENTITY']
  email varchar [unique]
  username varchar [unique]
  display_name varchar
  password_hash varchar
  created_at timestamp [not null, default: `now()`]
}

Table problem_instances {
  id bigint [pk, increment, note: 'GENERATED BY DEFAULT AS IDENTITY']
  domain varchar [not null, note: 'e.g. square_packing_rotatable']
  n int [not null]
  square_size double [not null, default: 1]
  container_type varchar [not null, default: 'square']
  allow_rotation boolean [not null, default: true]
  quant_scale bigint [not null, default: 1000000000]
  created_at timestamp [not null, default: `now()`]
}

Table workspaces {
  id bigint [pk, increment, note: 'GENERATED BY DEFAULT AS IDENTITY']
  instance_id bigint [not null, ref: > problem_instances.id]
  owner_user_id bigint [ref: > users.id]
  name varchar
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table workspace_squares {
  workspace_id bigint [not null, ref: > workspaces.id]
  idx int [not null]
  cx double [not null]
  cy double [not null]
  ux double [not null]
  uy double [not null]
  cx_q bigint [not null]
  cy_q bigint [not null]
  ux_q bigint [not null]
  uy_q bigint [not null]
  pinned boolean [not null, default: false]
  indexes {
    (workspace_id, idx) [pk]
  }
  Note: 'Primary key is (workspace_id, idx)'
}

Table submissions {
  id bigint [pk, increment, note: 'GENERATED BY DEFAULT AS IDENTITY']
  instance_id bigint [not null, ref: > problem_instances.id]
  user_id bigint [ref: > users.id]
  workspace_id bigint [ref: > workspaces.id]
  status varchar [not null, default: 'pending', note: 'pending | valid | invalid']
  objective_value double
  min_slack double
  solution_hash bytea [not null]
  is_duplicate boolean [not null, default: false, note: 'true if same bounds+count exists']
  duplicate_number int [note: '1-based rank among same-bounds submissions']
  created_at timestamp [not null, default: `now()`]
}

Table submission_squares {
  submission_id bigint [not null, ref: > submissions.id]
  idx int [not null]
  cx double [not null]
  cy double [not null]
  ux double [not null]
  uy double [not null]
  cx_q bigint [not null]
  cy_q bigint [not null]
  ux_q bigint [not null]
  uy_q bigint [not null]
  pinned boolean [not null, default: false]
  indexes {
    (submission_id, idx) [pk]
  }
  Note: 'Primary key is (submission_id, idx)'
}

Table submission_rectangle_squares {
  submission_id bigint [not null, ref: > submissions.id]
  idx int [not null]
  cx double [not null]
  cy double [not null]
  ux double [not null]
  uy double [not null]
  cx_q bigint [not null]
  cy_q bigint [not null]
  ux_q bigint [not null]
  uy_q bigint [not null]
  width double [not null, default: 56]
  height double [not null, default: 56]
  pinned boolean [not null, default: false]
  indexes {
    (submission_id, idx) [pk]
  }
  Note: 'Primary key is (submission_id, idx)'
}

Table validation_runs {
  id bigint [pk, increment, note: 'GENERATED BY DEFAULT AS IDENTITY']
  submission_id bigint [not null, ref: > submissions.id]
  validator_ver varchar [not null]
  valid boolean [not null]
  reason text
  metrics jsonb
  created_at timestamp [not null, default: `now()`]
}
I